--- a/conFusion/app/menu.html
+++ b/conFusion/app/menu.html
@@ -31,7 +31,7 @@
 <div class="container">
     <div class="row row-content" ng-controller="MenuController">
         <div class="col-xs-12">
-            <button ng-click="toggleDetails()" class="btn btn-xs btn-primary pull-right">{{ hideDetails ? 'Show Details': 'Hide Details'}}</button>
+            <button ng-click="toggleDetails()" class="btn btn-xs btn-primary pull-right">{{ showDetails ? 'Show Details': 'Hide Details'}}</button>
             <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation"
                     ng-class="{active:isSelected(1)}">
@@ -68,7 +68,7 @@
                                 <span class="label label-danger">{{dish.label}}</span>
                                 <span class="badge">{{dish.price | currency}}</span></h2>
 
-                            <p ng-hide="hideDetails">{{dish.description}}</p>
+                            <p ng-hide="showDetails">{{dish.description}}</p>
                         </div>
                     </li>
                 </ul>
@@ -80,6 +80,8 @@
 <!-- build:js scripts/main.js -->
 <script src="../bower_components/angular/angular.min.js"></script>
 <script src="scripts/app.js"></script>
+<script src="scripts/controllers.js"></script>
+<script src="scripts/services.js"></script>
 <!-- endbuild -->
 </body>
 
