--- a/conFusion/app/dishdetail.html
+++ b/conFusion/app/dishdetail.html
@@ -27,13 +27,14 @@
                 <footer>{{comment.author + ", "}} {{comment.date | date}}</footer>
 
             </blockquote>
-            <blockquote ng-show="commentForm.$valid && !commentForm.name.$pristine">
+            <blockquote ng-show="commentForm.$valid && !commentForm.$pristine">
                 <p>{{newComment.rating}} Stars</p>
                 <p>{{newComment.comment}}</p>
-                <footer>{{newComment.author}}</footer>
+                <footer>{{newComment.author + ", "}} {{newComment.date | date}}</footer>
             </blockquote>
             <form class="form-horizontal" name="commentForm" ng-submit="submitComment()" novalidate role="form">
-                <div class="form-group" ng-class="{ 'has-error' : commentForm.name.$error.required && !commentForm.name.$pristine }">
+                <div class="form-group"
+                     ng-class="{ 'has-error' : commentForm.name.$error.required && !commentForm.name.$pristine }">
                     <label for="name" class="col-sm-2 control-label"><b>Your Name</b></label>
 
                     <div class="col-sm-10">
@@ -55,17 +56,20 @@
                         <input class="radio-inline" name="rating" ng-model="newComment.rating" type="radio" value="5"> 5
                     </div>
                 </div>
-                <div class="form-group" ng-class="{ 'has-error' : commentForm.comment.$error.required && !commentForm.comment.$pristine }">
+                <div class="form-group"
+                     ng-class="{ 'has-error' : commentForm.comment.$error.required && !commentForm.comment.$pristine }">
                     <label for="comment" class="col-sm-2 control-label">Your Comment</label>
                     <div class="col-sm-10">
-                        <textarea class="form-control" id="comment" name="comment" rows="12" ng-model="newComment.comment" required></textarea>
+                        <textarea class="form-control" id="comment" name="comment" rows="12"
+                                  ng-model="newComment.comment" required></textarea>
                         <span ng-show="commentForm.comment.$error.required && !commentForm.comment.$pristine"
                               class="help-block">Comment cannot be left empty. Please enter your comment.</span>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-primary" ng-disabled=commentForm.$invalid>Submit Comment</button>
+                        <button type="submit" class="btn btn-primary" ng-disabled=commentForm.$invalid>Submit Comment
+                        </button>
                     </div>
                 </div>
             </form>
